@@ -1,6 +1,7 @@
 Revision history for Perl module IO::Tee.
 
 0.65 2017-08-16 NEILB
+    - Added "use warnings", changed "use vars ..." to our $VERSION, etc.
     - Switched to Dist::Zilla
     - Changed README to a short overview of module, how to install, etc
     - Moved original testsuite test.pl to t/original.t
